--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "datatables.net-bs": "^2.0.3",
     "feather-icons": "^4.29.1",
     "jquery": "^3.7.1",
+    "select2-bootstrap-5-theme": "^1.3.0",
     "toastr": "^2.1.4",
     "vue": "^3.4.26",
     "vue-router": "^4.0.3",
