--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "toastr": "^2.1.4",
     "vue": "^3.4.26",
     "vue-router": "^4.0.3",
-    "vue-toastification": "^1.7.14",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
